--- a/style.css
+++ b/style.css
@@ -117,3 +117,10 @@ p {
 .hi-center {
   text-align: center;
 }
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 96px;
+    line-height: 1.5;
+  }
+}
